@@ -109,6 +109,9 @@ $table_other->data[6][0] = __('Use agent access graph') . ui_print_help_icon("ag
 $table_other->data[6][1] = __('Yes').'&nbsp;'.html_print_radio_button ('agentaccess', 1, '', $config["agentaccess"], true).'&nbsp;&nbsp;';
 $table_other->data[6][1] .= __('No').'&nbsp;'.html_print_radio_button ('agentaccess', 0, '', $config["agentaccess"], true);
 
+$table_other->data[7][0] = __('Max. recommended number of files in attachment directory') . ui_print_help_tip(__('This number is the maximum number of files in attachment directory. If this number is reached then a warning message will appear in the header notification space.'), true);
+$table_other->data[7][1] = html_print_input_text ('num_files_attachment', $config["num_files_attachment"], '', 5, 5, true);
+
 echo '<form id="form_setup" method="post">';
 echo "<fieldset>";
 echo "<legend>" . __('Database maintenance options') . "</legend>";
