@@ -86,6 +86,7 @@ INSERT INTO tconfig (token, value) VALUES ('integria_inventory', '0');
 INSERT INTO tconfig (token, value) VALUES ('integria_url', ' ');
 INSERT INTO tconfig (token, value) VALUES ('list_ACL_IPs_for_API_0', '127.0.0.1');
 INSERT INTO tconfig (token, value) VALUES ('update_manager_installed', 1);
+INSERT INTO tconfig (token, value) VALUES ('num_files_attachment', 100);
 COMMIT;
 END;;
 
