@@ -83,7 +83,8 @@ INSERT INTO "tconfig" ("token", "value") VALUES
 ('integria_inventory', '0'),
 ('integria_url', ''),
 ('list_ACL_IPs_for_API_0', '127.0.0.1'),
-('update_manager_installed', 1);
+('update_manager_installed', 1),
+('num_files_attachment', 100);
 COMMIT WORK;
 
 
